Add a feature flag to disable the proactive discarding protections

Bug: 876348
Change-Id: Ib932652af7814f421009be79a7e9a1e5413fffd7
Reviewed-on: https://chromium-review.googlesource.com/c/1228505
Commit-Queue: Sébastien Marchand <sebmarchand@chromium.org>
Reviewed-by: Chris Hamilton <chrisha@chromium.org>
Cr-Commit-Position: refs/heads/master@{#597171}
Former-commit-id: 494dcbfa7da1c0cd848a12212e096e015be0c024